Bug fixes. Book list first step.
